deployment-analytics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: nipundew/lugx-analytics:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
