deployment-lugx-games.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games
  template:
    metadata:
      labels:
        app: games
    spec:
      containers:
        - name: games
          image: nipundew/lugx-games:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
