deployment-lugx-orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: nipundew/lugx-orders:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
