service-analytics.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  selector:
    app: analytics
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
  type: ClusterIP
