service-lugx-games.yml
apiVersion: v1
kind: Service
metadata:
  name: games
spec:
  selector:
    app: games
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
  type: ClusterIP
