service-lugx-orders.yml
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  selector:
    app: orders
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
  type: ClusterIP
