service-lugx-web.yml
apiVersion: v1
kind: Service
metadata:
  name: lugx-web-service
spec:
  type: ClusterIP
  selector:
    app: lugx-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
