lugx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.lugx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-web-service
                port:
                  number: 80
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: games
                port:
                  number: 80
